force-app/main/default/objects/IF_RELAY_INFO__c/IF_RELAY_INFO__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>IF_RELAY_INFO</label>
</CustomObject>