force-app/main/default/objects/IF_RELAY_INFO__c/fields/AddressConfirmKey__c.field-meta.xml
<CustomField>
    <fullName>AddressConfirmKey__c</fullName>
    <label>AddressConfirmKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>