force-app/main/default/objects/IF_RELAY_INFO__c/fields/Interface_auth_key__c.field-meta.xml
<CustomField>
    <fullName>Interface_auth_key__c</fullName>
    <label>Interface_auth_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>