force-app/main/default/objects/IF_RELAY_INFO__c/fields/Interface_id__c.field-meta.xml
<CustomField>
    <fullName>Interface_id__c</fullName>
    <label>Interface_id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>